Correction Mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,4 @@
-/* Reset and base styles */
-
-body {
-  color: #434455;
-  background-color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
+/* ---------- Reset styles ---------- */
 
 h1,
 h2,
@@ -13,8 +7,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 a {
@@ -28,10 +21,27 @@ ul {
   padding: 0;
 }
 
+/* Adaptive img */
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+/* ---------- Body styles ---------- */
+
+body {
+  color: #434455;
+  background-color: #fff;
+  font-family: 'Roboto', sans-serif;
+}
+
+button {
+  font-family: inherit;
+  color: currentColor;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
 
 .container {
@@ -65,7 +75,7 @@ img {
   }
 }
 
-/* Header */
+/* ---------- Header ---------- */
 
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -209,15 +219,13 @@ img {
   color: #404bbf;
 }
 
-/* Section 1. Hero */
+/* ---------- Section 1. Hero ---------- */
 
 .hero {
   background: #2e2f42;
   flex-shrink: 0;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
     url(../images/hero/img-hero-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -230,50 +238,40 @@ img {
 
 @media (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
       url(../images/hero/img-hero-mobile@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
       url(../images/hero/img-hero-tablet.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
       url(../images/hero/img-hero-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1158px) {
   .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
       url(../images/hero/img-hero.jpg);
   }
 }
 
 @media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
       url(../images/hero/img-hero@2x.jpg);
   }
 }
@@ -349,7 +347,7 @@ img {
   background-color: #404bbf;
 }
 
-/* Section 2. Features */
+/* ---------- Section 2. Features ---------- */
 
 .icon-place {
   display: none;
@@ -451,7 +449,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* Section 3. Team */
+/* --------- Section 3. Team ---------- */
 
 .company-employees {
   background-color: #f4f4fd;
@@ -579,7 +577,7 @@ img {
   fill: #f4f4fd;
 }
 
-/* Section 4. Portfolio */
+/* ---------- Section 4. Portfolio ---------- */
 
 .portfolio {
   padding: 120px 0;
@@ -673,7 +671,7 @@ img {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-/* Footer */
+/* ---------- Footer ---------- */
 
 .footer {
   background: #2e2f42;
@@ -941,7 +939,7 @@ img {
   }
 }
 
-/* Modal */
+/* ---------- Modal window ---------- */
 
 .backdrop {
   position: fixed;
@@ -964,7 +962,7 @@ img {
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 72px 24px 24px 24px;
-  width: 288px;
+  min-width: 288px;
   min-height: 623px;
   border-radius: 4px;
   background: #fcfcfc;
@@ -1149,16 +1147,13 @@ label {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.accept-checkbox:checked + .form-agreement .form-agreement-checkbox {
+.accept-checkbox:checked+.form-agreement .form-agreement-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.accept-checkbox:checked
-  + .form-agreement
-  .form-agreement-checkbox
-  .icon-check-mark {
+.accept-checkbox:checked+.form-agreement .form-agreement-checkbox .icon-check-mark {
   fill: #f4f4fd;
 }
 
@@ -1190,42 +1185,20 @@ label {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + .form-icon {
+.form-input:focus+.form-icon {
   fill: #4d5ae5;
 }
 
-/* Mobile Menu */
+/* ---------- Mobile menu ---------- */
 
 .mobile-container {
+  position: relative;
   display: flex;
   flex-direction: column;
-}
-
-.mobile-menu {
-  position: fixed;
-  background: #fff;
-  top: 0;
-  left: 0;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
-  padding: 72px 24px 40px 16px;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateX(-100%);
-  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
-}
-
-.mobile-menu.is-open {
-  transform: translateX(0);
-  opacity: 1;
-  visibility: visible;
+  padding: 72px 16px 0;
+  margin-right: auto;
 }
 
 .mobile-menu-btn {
@@ -1244,34 +1217,66 @@ label {
   }
 }
 
+.mobile-menu {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  visibility: hidden;
+  transform: translateY(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+  visibility: visible;
+}
+
 .mobile-menu-close-btn {
   position: absolute;
-  padding: 0;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
-  border-radius: 50%;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  align-self: flex-end;
   display: flex;
-  justify-content: center;
   align-items: center;
-  cursor: pointer;
+  justify-content: center;
+  padding: 0;
+  border: 1px solid #e7e9fc;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close-btn-icon {
+  stroke: #2e2f42;
 }
 
 .mobile-menu-list {
-  color: #2e2f42;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
   margin-bottom: auto;
 }
 
-.mobile-menu-item:not(:last-child) {
+.mobile-menu-nav-item:not(:last-child) {
   margin-bottom: 40px;
+}
+
+.mobile-menu-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
 }
 
 .mobile-menu-link.current {
@@ -1284,34 +1289,28 @@ label {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  margin-bottom: 48px;
-}
-
-.mobile-menu-contact.accent {
-  color: #4d5ae5;
-}
-
-.mobile-menu-nav-item:first-child {
-  color: #404bbf;
-}
-
-.mobile-menu-nav-item:not(:last-child) {
-  margin-bottom: 40px;
-}
-
-.mobile-menu-nav-item:last-child {
-  margin-bottom: 168px;
+  margin: 40px 0 48px;
 }
 
 .mobile-menu-contact-item:first-child {
   margin-bottom: 24px;
 }
 
-.mobile-menu-contact-item:last-child {
-  margin-bottom: 48px;
+.mobile-menu-contact {
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+}
+
+.mobile-menu-contact.accent {
+  color: #4d5ae5;
 }
 
 .mobile-menu-socials {
+  justify-content: flex-start;
   display: flex;
   gap: 40px;
+  padding-bottom: 40px;
 }
